--- a/app/src/main/res/layout/welcome_slide2.xml
+++ b/app/src/main/res/layout/welcome_slide2.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_screen1">
+    android:background="#ffffff">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -12,15 +12,15 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
         <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:src="@drawable/movie"
+            android:layout_width="400dp"
+            android:layout_height="300dp"
+            android:src="@drawable/smovie"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Movie"
-            android:textColor="@android:color/white"
+            android:textColor="#000000"
             android:textSize="@dimen/slide_title"
             android:textStyle="bold" />
 
@@ -32,7 +32,7 @@
             android:paddingRight="@dimen/desc_padding"
             android:text="@string/slide_2_desc"
             android:textAlignment="center"
-            android:textColor="@android:color/white"
+            android:textColor="#000000"
             android:textSize="@dimen/slide_desc" />
 
 
