--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,5 +17,10 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="NavigationDrawerStyle">
+        <item name="android:textSize">22dp</item><!-- text size in menu-->
+        <item name="android:paddingTop">7dp</item>
+        <item name="android:listPreferredItemHeightSmall">50dp</item><!-- item size in menu-->
+    </style>
 
 </resources>
