Upload activity added

--- a/app/src/main/res/layout/upload_menu_cardview.xml
+++ b/app/src/main/res/layout/upload_menu_cardview.xml
@@ -141,6 +141,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <ImageView
+                    android:id="@+id/imageViewOthers"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"/>
