--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -65,6 +65,10 @@
         android:layout_height="match_parent"
         >
 <EditText
+    android:shadowColor="@color/transparent_white"
+    android:shadowDx="8"
+    android:shadowDy="8"
+    android:shadowRadius="20"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/number"
