--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,9 +18,11 @@
     </style>
 
     <style name="NavigationDrawerStyle">
-        <item name="android:textSize">22dp</item><!-- text size in menu-->
+        <item name="android:textSize">22dp</item>
+        <!-- text size in menu-->
         <item name="android:paddingTop">7dp</item>
-        <item name="android:listPreferredItemHeightSmall">50dp</item><!-- item size in menu-->
+        <item name="android:listPreferredItemHeightSmall">50dp</item>
+        <!-- item size in menu-->
     </style>
 
 </resources>
