Toolbar for upload activity added

--- a/app/src/main/res/layout/content_upload.xml
+++ b/app/src/main/res/layout/content_upload.xml
@@ -57,7 +57,7 @@
                 android:id="@+id/first"
                 android:backgroundTintMode="src_in"
                 android:textColor="#000000"
-                android:hint="Start tying..."/>
+                android:hint="Start typing..."/>
 
 
         </LinearLayout>
