--- a/app/src/main/res/layout/content_upload.xml
+++ b/app/src/main/res/layout/content_upload.xml
@@ -24,10 +24,11 @@
 
         android:alpha="0"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="wrap_content"
         android:id="@+id/menu_toolbar"
         android:layout_margin="7dp"
-       android:background="@drawable/foreground"
+
+        android:background="@drawable/foreground"
         android:layout_gravity="bottom">
 
 
@@ -36,7 +37,7 @@
             android:layout_height="30dp"
             android:id="@+id/toolbar_button_Upload"
             android:text="+"
-           android:layout_marginBottom="60dp"
+            android:layout_marginBottom="60dp"
             android:textSize="26dp"
             android:background="@null"
             />
@@ -45,10 +46,11 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:orientation="vertical"
             android:layout_width="320dp"
-            android:layout_marginLeft="40dp"
-            android:layout_height="100dp"
+            android:padding="5dp"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
             android:id="@+id/linearLayout"
-            android:layout_marginBottom="20dp">
+         >
 
                 <EditText
                 android:layout_width="match_parent"
