--- a/app/src/main/res/layout/app_bar_upload.xml
+++ b/app/src/main/res/layout/app_bar_upload.xml
@@ -17,7 +17,17 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorAccent"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay" >
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:id="@+id/toolbar_content_upload"
+                android:textColor="@color/white"
+                android:textSize="20dp"
+                android:text="Hello, Name"/>
+            </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
