--- a/app/src/main/res/layout/content_upload.xml
+++ b/app/src/main/res/layout/content_upload.xml
@@ -21,7 +21,7 @@
 
     <android.support.v7.widget.Toolbar
 
-        android:alpha="0"
+        android:alpha="1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/menu_toolbar"
@@ -60,6 +60,16 @@
                 android:textColor="#000000"
                 android:hint="Start typing..."/>
 
+            <Button
+                android:layout_marginTop="12dp"
+                android:background="@drawable/button_background"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Upload"
+                android:padding="7dp"
+                android:gravity="bottom"
+                android:textColor="@color/white"
+                android:textSize="16dp"/>
 
         </LinearLayout>
 
