--- a/app/src/main/res/layout/content_after_login__main_page.xml
+++ b/app/src/main/res/layout/content_after_login__main_page.xml
@@ -5,12 +5,78 @@
     android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:background="#ffffff"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.tanmay.shell.AfterLogin_MainPage"
     tools:showIn="@layout/app_bar_after_login__main_page">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:srcCompat="@drawable/sidebar"
+        android:id="@+id/imageView3"
+        android:layout_alignParentTop="false"
+        android:baselineAlignBottom="false"
+        android:focusable="false"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentRight="false"
+        android:layout_alignParentStart="false"
+        android:adjustViewBounds="true"
+        android:cropToPadding="true" />
+
+    <Button
+        android:background="@null"
+        android:layout_width="75dp"
+        android:layout_height="80dp"
+        android:id="@+id/button"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/button2" />
+
+    <Button
+        android:background="@null"
+        android:layout_width="75dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="14dp"
+        android:id="@+id/button2"
+        android:layout_below="@+id/button"
+        android:layout_alignEnd="@+id/imageView3" />
+
+    <Button
+
+        android:background="@null"
+        android:layout_width="75dp"
+        android:layout_height="80dp"
+        android:id="@+id/button5"
+        android:layout_above="@+id/button6"
+        android:layout_alignEnd="@+id/imageView3" />
+
+    <Button
+
+        android:background="@null"
+        android:layout_width="75dp"
+        android:layout_height="80dp"
+        android:layout_marginBottom="23dp"
+        android:id="@+id/button6"
+        android:layout_alignParentBottom="true"
+        android:layout_alignEnd="@+id/imageView3" />
+
+    <Button
+
+        android:background="@null"
+        android:layout_width="75dp"
+        android:layout_height="80dp"
+        android:id="@+id/button4"
+        android:layout_marginBottom="107dp"
+        android:layout_above="@+id/button6"
+        android:layout_alignEnd="@+id/imageView3" />
+
+    <Button
+
+        android:background="@null"
+        android:layout_width="75dp"
+        android:layout_height="80dp"
+        android:id="@+id/button3"
+        android:layout_marginBottom="27dp"
+        android:layout_above="@+id/button4"
+        android:layout_alignEnd="@+id/imageView3" />
 </RelativeLayout>
