--- a/app/src/main/res/menu/activity_after_login__main_page_drawer.xml
+++ b/app/src/main/res/menu/activity_after_login__main_page_drawer.xml
@@ -25,6 +25,14 @@
             android:icon="@drawable/upload"
             android:title="Upload" />
 </group>
+
+    <group  android:id="@+id/e1" android:checkableBehavior="single">
+        <item
+            android:id="@+id/bucket"
+            android:icon="@drawable/yourupload"
+            android:title="Your Bucket" />
+    </group>
+
     <group  android:id="@+id/b" android:checkableBehavior="single">
         <item
             android:id="@+id/Profile"
