--- a/app/src/main/res/layout/activity_your__bucket.xml
+++ b/app/src/main/res/layout/activity_your__bucket.xml
@@ -15,10 +15,12 @@
         app:tabTextColor="#ffffff"
         app:tabSelectedTextColor="#27ae60"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
+        android:layout_below="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"/>
 
