--- a/app/src/main/res/layout/content_main__menu.xml
+++ b/app/src/main/res/layout/content_main__menu.xml
@@ -4,16 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/colorBackground"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.tanmay.shell.Main_Menu"
     tools:showIn="@layout/app_bar_main__menu">
 
     <android.support.v4.view.ViewPager
+        android:layout_marginBottom="16dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/vPager"
@@ -22,9 +19,12 @@
     <android.support.v4.view.PagerTabStrip
         android:id="@+id/pager_header"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="36dp"
         android:layout_gravity="top"
         android:paddingBottom="4dp"
-        android:paddingTop="4dp" />
+        android:background="@color/colorPrimary"
+        android:paddingTop="4dp"
+        android:layout_marginBottom="16dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
     </android.support.v4.view.ViewPager>
 </RelativeLayout>
