--- a/app/src/main/res/layout/your_bucket_movies.xml
+++ b/app/src/main/res/layout/your_bucket_movies.xml
@@ -4,13 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:layout_marginTop="50dp"
-        android:layout_width="match_parent"
-        android:background="#909497"
-        android:layout_height="match_parent">
 
-    </RelativeLayout>
+    <android.support.v7.widget.RecyclerView
+        android:layout_marginTop="8dp"
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:scrollbars="vertical"
+        />
+
 
 
 </LinearLayout>
