--- a/app/src/main/res/layout/album_card.xml
+++ b/app/src/main/res/layout/album_card.xml
@@ -13,6 +13,8 @@
         android:layout_height="180dp"
         android:layout_gravity="center"
         android:layout_margin="10dp"
+        card_view:cardElevation="2dp"
+        card_view:cardCornerRadius="4dp"
         >
         <RelativeLayout
             android:layout_width="150dp"
@@ -46,14 +48,25 @@
                 android:id="@+id/title"
                 android:text="Sample Text"
                 android:gravity="center_vertical"
-                android:textSize="14sp"
+                android:textSize="12sp"
+                android:layout_marginRight="28dp"
                 android:textColor="#ffffff"
                 android:layout_width="180dp"
-                android:layout_height="45dp"
-                android:layout_marginLeft="10dp"
-          android:layout_marginTop="128dp"
+                android:layout_height="28dp"
+                android:layout_marginLeft="6dp"
+                android:layout_marginTop="136dp"
                 android:layout_alignParentStart="true" />
 
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="29d"
+                android:textSize="10sp"
+                android:layout_marginLeft="6dp"
+                android:id="@+id/time"
+                android:layout_alignBaseline="@+id/title"
+                android:layout_alignBottom="@+id/title"
+                android:layout_alignStart="@+id/imageView" />
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
