--- a/app/src/main/res/layout/activity_main__menu.xml
+++ b/app/src/main/res/layout/activity_main__menu.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -18,9 +19,14 @@
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        app:itemIconTint="#27AE60"
         android:layout_gravity="start"
+        android:background="#000000"
+        android:layout_marginTop="81dp"
+        app:theme="@style/NavigationDrawerStyle"
+        app:itemTextColor="#ffffff"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_main__menu"
-        app:menu="@menu/activity_main__menu_drawer" />
+        app:headerLayout="@layout/nav_header_after_login__main_page"
+        app:menu="@menu/activity_after_login__main_page_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
