--- a/app/src/main/res/layout/content_main__menu.xml
+++ b/app/src/main/res/layout/content_main__menu.xml
@@ -1,5 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:itemIconTint="#27AE60"
+        android:layout_gravity="start"
+        android:background="#000000"
+        android:layout_marginTop="81dp"
+        app:theme="@style/NavigationDrawerStyle"
+        app:itemTextColor="#ffffff"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_after_login__main_page"
+        app:menu="@menu/activity_after_login__main_page_drawer" />
+
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,8 +32,11 @@
     tools:context="com.example.tanmay.shell.Main_Menu"
     tools:showIn="@layout/app_bar_main__menu">
 
+
     <android.support.v4.view.ViewPager
+
         android:layout_marginBottom="16dp"
+        android:layout_marginTop="52dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/vPager"
@@ -19,6 +45,7 @@
     <android.support.v4.view.PagerTabStrip
         android:id="@+id/pager_header"
         android:layout_width="match_parent"
+
         android:layout_height="36dp"
         android:layout_gravity="top"
         android:paddingBottom="4dp"
@@ -28,3 +55,4 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
     </android.support.v4.view.ViewPager>
 </RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
